weight analysis and feature engineering

--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -1,7 +1,4 @@
 TODO:
-Fix messed up global_feat_dict
-Refactor test.py
-
 Feature engineering
 	. Repeat optimize for each feature added
 	. new per file metrics
@@ -9,6 +6,7 @@ Feature engineering
 
 Classifiers
 	. figure out how to make sense of kNN classifier results (returns distance to all points?)
+	. try random forests
 
 Use sklearn scoring
 Implement optimize:
