Kaggle 0.75. Found bug in prior submission

--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -1,4 +1,6 @@
 TODO:
+WTF just happened with our kaggle submission? went from 0.76 to 0.27??
+
 Feature engineering
 	. Repeat optimize for each feature added
 	. new per file metrics
