writeup notes; cleanup

--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -1,5 +1,6 @@
 TODO:
 Feature engineering
+	. create second set of features using per thread info
 	. Repeat optimize for each feature added
 	. new per file metrics
 	. Add per thread parameters
