--- a/Practical3/writeup/Practical3_writeup.tex
+++ b/Practical3/writeup/Practical3_writeup.tex
@@ -56,6 +56,8 @@ used CV to generate Logistic Regression weights. Took mean and std of resulting 
 
 \subsection*{Selection of fitting technique}
 
+Tried LogisticRegression and SVM with a number of different C values, none of which made a significant difference.
+
 \subsection*{Exploratory Data Analysis}
 
 \section*{Conclusion}
