Kaggle 0.22 using thread metrics

--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -5,6 +5,8 @@ Feature engineering
 	. new per file metrics
 	. Add per thread parameters
 
+Figure out what to do with send_socket / dump_line and recv_socket / dump_line
+
 Classifiers
 	. figure out how to make sense of kNN classifier results (returns distance to all points?)
 	. try random forests
