--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -1,4 +1,13 @@
 TODO:
+get pragmatic:
+. weighting per class, use F1 score, change threshold
+. look at each classes probability and distribution
+
+
+plot average predicted vs. actual distribution
+
+find correlation among submitted scores to find actual values
+
 use a better hashing function that doesn't as wide fluctuations in values, ideally an enum
 
 can we cluster with kMeans or use PCA?
