--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -1,4 +1,6 @@
 TODO:
+how to combine multiple classifiers using different sets of data?
+use ids? hierarchy?
 get pragmatic:
 . weighting per class, use F1 score, change threshold
 . look at each classes probability and distribution
