--- a/Practical3/TODO
+++ b/Practical3/TODO
@@ -1,6 +1,8 @@
 TODO:
 how to combine multiple classifiers using different sets of data?
 use ids? hierarchy?
+given the sparsity, take the logs of the feature values?
+
 get pragmatic:
 . weighting per class, use F1 score, change threshold
 . look at each classes probability and distribution
