--- a/Practical3/writeup/Practical3_writeup.tex
+++ b/Practical3/writeup/Practical3_writeup.tex
@@ -25,9 +25,13 @@
 \maketitle
 \section*{Warm-Up}
 
-\subsection*{Baseline}
+We consider two approaches for clustering fruits (with length and width measurements provided) into a categories.
 
-\subsection*{Warmup Topic 1}
+[Plot]
+
+\subsection*{Logistic Regression}
+
+\subsection*{Generative Models}
 
 \subsection*{Warmup Summary}
 
