--- a/Practical3/writeup/Practical3_writeup.tex
+++ b/Practical3/writeup/Practical3_writeup.tex
@@ -111,18 +111,28 @@ As we can see from the graphs in the previos sections, allowing a non-linear dec
 
 \subsection*{Preliminary Data Analysis}
 
-NOTES:
-4GB of XML to parse and process, first step was to split the training and the testing. broke into vectorize, train and test steps, persisting appropriate intermediate data at each step. This also enabled parallelization of test runs over a cluster of machines.
+As soon as we started the analysis the large 4GB XML file size was causing issues in parsing and processing. To ameliorate this, we first split the training and the testing. This allowed us to use only the relevant train/test data at each step, reduced file size and computation time, and also enabled parallelization of test runs over a cluster of machines. We shared this code on Piazza for the benefit of other students.
 
 \subsection*{Using Cross-validation}
+Five-fold cross validation was used on the training data, with runs with train / CV data pairings of 70/30, 80/20 and 90/10 for each classifier.
 
-Ran 5 CV sets of train / CV data 70/30, 80/20 and 90/10 for each classifier.
+This was valuable in helping to reduce the risk of overfitting, and was useful in obtaining more robust results.
 
 \section*{Approaches considered}
 
+We actually found that combining two different sets of classifers worked under different situations. For instance, we found that the summary features had the most overall explanatory power (XX percent), but that more specific information on each process was useful in specifically identifying certain cases.
+\
+\\
+Interestingly, we found that the hyper-detailed information on each process feature was actually less useful on average than more aggregated features. This points to the importance of feature engineering and trying to capture key elements of the underlying data rather than simply adding features without as much thought to why they might make sense and if they are the best representation of key attributes.
+\
+\\
+While we initially had them as seperate models, we instead developed a 'meta classifier' which we trained to simply discriminate which of the two models was likely to perform well on that type of potential malware. We used this model to then select between the two model prediction
+
+
+
 \subsection*{Feature Engineering}
 
-
+NOTE
 Aggregate Features per training file:
  selected all process features  (e.g. 'startreason', 'terminationreason', 'username', 'executionstatus', 'applicationtype') and summary thread features (num of each type of system call).
 
@@ -131,11 +141,18 @@ used CV to generate Logistic Regression weights. Took mean and std of resulting 
 
 
 \subsection*{Selection of fitting technique}
+NOTE
+We explored Logistic Regression and SVM with a range of different C values, but this range in C values didn't make a significant difference.
 
-Tried LogisticRegression and SVM with a number of different C values, none of which made a significant difference.
 
 \subsection*{Exploratory Data Analysis}
+NOTE
 
 \section*{Conclusion}
+\\
+We conclude from this practical that considering what classifiers work well over what ranges is extremely important. That is, when we combined models to allow them to effectively apply over different 'ranges' of the data, we were able to capture more nuanced effects than if we had simply attempted a single set of classifers that was applied to all data across the range. 
+\\
+\
+This idea -- which is also true in decision trees and random forests -- effectively allows the function mapping the data to be more specific to the variability observed in the data and points to an important idea for us to consider in future machine learning projects.
 
 \end{document}  
